# CLI

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/scripts/: check-release-state.sh  checkout-a3s-workspace.sh  patch-managed-srt-linux.mjs  restore-managed-srt-executables.sh  test-check-release-state.sh  use-published-a3s-crates.sh  verify-managed-srt-tree.mjs
.github/workflows/: ci.yml  publish-tui.yml  release.yml
docs/: a3s-use-component-platform.md  a3s-use-domain-design.md  a3s-use-extension-design.md  cli-migration-plan.md  cli-product-design.md  cli-technical-architecture.md  code-intelligence.md  component-management-design.md  cross-platform-install-architecture.md  cross-platform-install-product.md  deep-research-event-sourcing.md  deep-research-evidence-compiler.md  deep-research-evidence-first-redesign.md  deep-research-evidence-loop.md  deep-research-product-validation.md  deep-research-research-brief.md  knowledge-base-design.md  knowledge-compilation.md
docs/superpowers/plans/: 2026-07-13-cli-owned-session-llm-client.md  2026-07-16-codex-cloudflare-transport.md
docs/superpowers/specs/: 2026-07-13-cli-owned-session-llm-client-design.md  2026-07-16-codex-cloudflare-transport-design.md
skills/: a3s-os-capabilities.md  okf.md
skills/report-master/: SKILL.md
skills/report-master/agents/: openai.yaml
skills/report-master/references/: report-system.md
src/: a3s_os.rs  bench_component.rs  box_cmd.rs  budget.rs  claude.rs  codex.rs  components.rs  config.rs  lib.rs  main.rs  os_cmd.rs  registry.rs  runtime_tool.rs  search_cmd.rs  session_llm.rs  system_agents.rs  system_agents_tests.rs  tools.rs  tui.rs  update.rs  use_registry.rs  user_paths.rs
src/a3s_os/: tests.rs
src/account/: catalog.rs  command.rs  mod.rs
src/account_providers/: cli_transport.rs  codebuddy.rs  codex.rs  codex_http.rs  host_tools.rs  kimi.rs  mod.rs  paths.rs  protocol.rs
src/account_providers/claude/: code_cli.rs  credentials.rs  mod.rs  model.rs  raw_messages.rs
src/account_providers/codebuddy/: windows.rs
src/account_providers/codex/: auth.rs  stream.rs  tests.rs  tls.rs
src/account_providers/kimi/: local_state.rs
src/api/: mod.rs
src/api/code_web/: dto.rs  mod.rs  module.rs  permissions.rs  session_runtime.rs  session_store.rs  state.rs  workspace_backend_cache.rs
src/api/serve/: api_gateway.rs  background.rs  foreground_interrupt.rs  mod.rs  options.rs
src/api/web/: assets.rs  mod.rs  static_files.rs
src/claude/: code_cli.rs  credentials.rs  host_tools.rs  model.rs  protocol.rs  raw_messages.rs
src/cli/: args.rs  context.rs  mod.rs  output.rs
src/cli/args/: admin.rs  code.rs
src/commands/: auth.rs  cache.rs  completion.rs  config.rs  config_resolver.rs  mod.rs  model.rs  registry.rs  top.rs  web.rs
src/commands/code/: asset_runtime.rs  asset_types.rs  assets.rs  context_history.rs  exec.rs  exec_policy.rs  knowledge.rs  memory.rs  mod.rs  naming.rs  research_runtime.rs  session.rs
src/compact/: auto_compact.rs  compactor.rs  mod.rs  model_context.rs  projection.rs
src/components/: catalog.rs  command.rs  discovery.rs  id.rs  journal.rs  lifecycle.rs  lock.rs  managed_srt.rs  mod.rs  paths.rs  plan.rs  probe.rs  release_bundle.rs  release_install.rs  state.rs  tests.rs
src/components/command/: options.rs  output.rs  tests.rs
src/components/managed_srt/: patch-managed-srt-linux.mjs  patch-managed-srt.mjs  tests.rs  tree.rs
src/components/plan/: local_package.rs  tests.rs
src/evolution/: materialize.rs  materialize_tests.rs  mod.rs  model.rs  observer.rs  runtime.rs  store.rs
src/model/: catalog.rs  command.rs  mod.rs  route.rs  selection.rs
src/research/: assessment.rs  contract_outcome.rs  error.rs  event.rs  evidence.rs  mod.rs  model.rs  outline.rs  perspective.rs  questioning.rs  reducer.rs  state.rs  tests.rs  validation.rs
src/research/assessment/: decoding.rs  derivation.rs  generation.rs  tests.rs  validation.rs
src/research/compiler/: api.rs  catalog.rs  catalog_tests.rs  contract.rs  coverage.rs  document.rs  frozen_fixture.rs  frozen_replay_tests.rs  ledger_tests.rs  mod.rs  outcome_tests.rs  projection_tests.rs  render_tests.rs  test_support.rs  tests.rs
src/research/questioning/: tests.rs
src/research/tests/: drafting.rs  evidence_catalog.rs
src/system_agents/: control.rs  preference.rs  projection.rs  text.rs
src/system_agents_tests/: control.rs
src/timeline/: mod.rs
src/top/: collect.rs  mod.rs  view.rs
src/tui/: approval_layout.rs  code_cli.rs  code_serve.rs  config.rs  gitutil.rs  kbutil.rs  memutil.rs  mod.rs  os_im.rs  remote_ui.rs  render.rs  runtime_projection.rs  skills.rs  syntax.rs  tests.rs  transcript.rs  update.rs  util.rs
src/tui/app/: actions.rs  agent_presence.rs  agent_presence_tests.rs  async_dispatch.rs  commands.rs  events.rs  fork.rs  launch.rs  permission_rules.rs  permissions.rs  projections.rs  research.rs  research_workflow.rs  rewind.rs  (+12 more)
src/update/: support.rs
src/use_registry/: tests.rs  validation.rs
support/: managed-srt.tree-sha256
support/managed-srt/: THIRD_PARTY_NOTICES.md  package-lock.json  package.json
tests/: account_commands.rs  account_discovery_windows.rs  administration_contract.rs  box_command.rs  box_command_soak.rs  cli_contract.rs  code_asset_contract.rs  code_context_contract.rs  code_exec.rs  code_session.rs  code_use_first_use.rs  code_use_windows_e2e.rs  code_webview_first_use.rs  component_commands.rs  component_journal.rs  component_lifecycle.rs  compose_acl_e2e.rs  ctx_compact_real_llm.rs  deep_research_eval_manifest.rs  fork_real_llm.rs  model_commands.rs  os_auth_commands.rs  real_os_lifecycle.rs  remote_registry_components.rs  search_commands.rs  tui_exit.rs  web_asset_download.rs  web_cli.rs  web_interrupt.rs  web_plugin_marketplace.rs  web_workspace.rs  windows_code_startup.rs
tests/code_use_first_use/: real_release.rs
tests/code_use_windows_e2e/: fake_openai.rs  fixture.rs  plans.rs
tests/support/: mod.rs  tuf_test_support.rs
tests/web_cli/: web_turn_queue.rs
tests/web_plugin_marketplace/: real_e2e.rs
(+408 files in other folders)
