[package]
name = "a3s"
version = "0.7.5"
edition = "2021"
description = "a3s — A3S coding agent CLI; `a3s code` launches the interactive TUI"
license = "MIT"
repository = "https://github.com/A3S-Lab/Cli"
homepage = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "cli", "agent", "tui", "coding"]
categories = ["command-line-utilities"]

[[bin]]
name = "a3s"
path = "src/main.rs"

[dependencies]
a3s-code-core = "=4.3.1"
a3s-boot = "0.1.0"
# Long-term memory store (same crate/version a3s-code-core uses) — the `/ctx save`
# fusion writes ctx findings into it as durable MemoryItems.
a3s-memory = "0.1.2"
a3s-tui = "=0.1.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net", "fs", "signal"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Codex account client (custom LlmClient over the ChatGPT backend).
async-trait = "0.1"
tokio-util = "0.7"
base64 = "0.22"
futures = "0.3"
http-body-util = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
axum = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true

[patch.crates-io]
# Monorepo development builds should exercise the local A3S crates instead of
# waiting for every submodule change to be published to crates.io.
a3s-code-core = { path = "../code/core" }
a3s-boot = { path = "../boot" }
a3s-common = { path = "../common" }
a3s-lane = { path = "../lane" }
a3s-memory = { path = "../memory" }
a3s-search = { path = "../search" }
a3s-tui = { path = "../tui" }
