[package]
name = "a3s"
version = "0.9.1"
edition = "2021"
description = "a3s — A3S coding agent CLI; `a3s code` launches the interactive TUI"
license = "MIT"
repository = "https://github.com/A3S-Lab/Cli"
homepage = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "cli", "agent", "tui", "coding"]
categories = ["command-line-utilities"]

[[bin]]
name = "a3s"
path = "src/main.rs"

[dependencies]
a3s-code-core = "=5.3.2"
a3s-boot = "=0.1.2"
a3s-lane = "=0.5.1"
# Long-term memory store (same crate/version a3s-code-core uses) — the `/ctx save`
# fusion writes ctx findings into it as durable MemoryItems.
a3s-memory = "0.1.2"
a3s-tui = "=0.1.10"
a3s-search = { version = "1.4.3", features = ["lightpanda"] }
a3s-acl = "=0.2.2"
a3s-updater = "=0.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std", "net", "fs", "signal"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Codex account client (custom LlmClient over the ChatGPT backend).
async-trait = "0.1"
tokio-util = "0.7"
base64 = "0.22"
futures = "0.3"
http-body-util = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-codex = { package = "reqwest", version = "0.12", default-features = false, features = ["charset", "cookies", "http2", "json", "stream", "system-proxy", "rustls-tls-native-roots"] }
sha2 = "0.10"
axum = "0.8"
comrak = { version = "0.36", default-features = false }
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true

[patch.crates-io]
# Monorepo development builds should exercise the local A3S crates instead of
# waiting for every submodule change to be published to crates.io.
a3s-code-core = { path = "../code/core" }
a3s-acl = { path = "../acl" }
a3s-boot = { path = "../boot" }
a3s-common = { path = "../common" }
a3s-lane = { path = "../lane" }
a3s-memory = { path = "../memory" }
a3s-search = { path = "../search" }
a3s-tui = { path = "../tui" }
a3s-updater = { path = "../updater" }
