[package]
name = "a3s"
version = "0.10.4"
edition = "2021"
description = "a3s — A3S coding agent CLI; `a3s code` launches the interactive TUI"
license = "MIT"
repository = "https://github.com/A3S-Lab/Cli"
homepage = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "cli", "agent", "tui", "coding"]
categories = ["command-line-utilities"]

[[bin]]
name = "a3s"
path = "src/main.rs"

[dependencies]
a3s-code-core = "=6.4.2"
a3s-boot = { version = "=0.1.3", features = ["ilink"] }
a3s-lane = "=0.5.1"
# Long-term memory store (same crate/version a3s-code-core uses) — the `/ctx save`
# fusion writes ctx findings into it as durable MemoryItems.
a3s-memory = "0.1.2"
a3s-tui = "=0.1.13"
a3s-search = { version = "=2.1.0", features = ["lightpanda"] }
a3s-acl = "=0.2.2"
a3s-updater = "=0.3.0"
a3s-use-extension = "=0.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std", "net", "fs", "signal"] }
anyhow = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Codex account client (custom LlmClient over the ChatGPT backend).
async-trait = "0.1"
tokio-util = "0.7"
base64 = "0.22"
futures = "0.3"
fs2 = "0.4"
http-body-util = "0.1"
httpdate = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json", "rustls-tls", "socks", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-socks = "0.5"
thiserror = "2"
webpki-roots = "1"
sha2 = "0.10"
sysinfo = "0.36.1"
axum = "0.8"
comrak = { version = "0.36", default-features = false }
tempfile = "3"
tracing = "0.1"
notify = "8.2"
url = "2"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
] }

[dev-dependencies]
flate2 = "1"
olpc-cjson = "0.1"
ring = "0.17"
tar = "0.4"
tempfile = "3"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[patch.crates-io]
# Monorepo development builds should exercise the local A3S crates instead of
# waiting for every submodule change to be published to crates.io.
a3s-code-core = { path = "../code/core" }
a3s-acl = { path = "../acl" }
a3s-boot = { path = "../boot" }
a3s-common = { path = "../common" }
a3s-lane = { path = "../lane" }
a3s-memory = { path = "../memory" }
a3s-search = { path = "../search" }
a3s-tui = { path = "../tui" }
a3s-updater = { path = "../updater" }
a3s-use-extension = { path = "../use/crates/extension" }
